Fix alignment of logo and navigation with flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,41 +20,46 @@ body {
 
 /* h1 and navigation when decided on body font size adjust h1 if needed */
 
-#logo {
-    font-size: 3em;
+#header-flex{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    
+}
+
+#header-flex a{
+    text-decoration: none;
+    color:black;
+}
+
+#header-flex a:hover{
+    color: #029d75;;
+}
+
+#logo{
+    font-size: 50px;
     margin-left: 50px;
-    color: green;
-
 }
 
-
-#navbar {
-    float: right;
+#navbar{
+    display: flex;
     list-style-type: none;
-
+    
 }
 
-#logo,
-#navbar {
-    background-color: yellow;
-
-
-}
-
-#navbar a {
+#navbar a{
     text-decoration: none;
     font-size: 25px;
+    font-weight: bold;
+}
 
+#navbar li{
+    margin-right: 50px;
 }
 
 
-/* float left doesn't seem needed here ?*/
-
-#navbar li {
-    float: left;
-    display: inline;
-    margin-right: 50px;
-
+#header-flex{
+    line-height: 50px;
 }
 
 /* aurora hero banner */
